pages/base/base.css
/* ... */
.uzsuPopupHeader{
  font-size: 2em;
  text-align: center;
  margin-bottom: 1.2em;
}
.uzsuRow{
  clear: both;
  height: 3.8em;
}
/* possible work around for firefox line break issues with scrollbars
.uzsuRow:first-of-type::after {
    content: '';
    visibility: hidden;
    width: 18px;
    display: inline-block;
}
*/
.uzsuRowExpert, .uzsuRowHoliday, .uzsuRowCondition, .uzsuRowDelayedExec{
  height: 3.8em;
  border: 1px dotted;
  margin: 0 0.6em 1.2em 1.2em;
}
.uzsuRowExpHoli:after{
  clear: both;
  content: " ";
  display: block;
  height: 0;
}
.uzsuRowExpertText, .uzsuRowHolidayText, .uzsuRowConditionText, .uzsuRowDelayedExecText{
  height: 0em;
  font-size: 0.7em;
  position: relative;
  top: 5em;
  left: -1.5em;
  transform: rotate(270deg);
  transform-origin: 0 0;
}
.uzsuRowFooter{
  clear: both;
  height: 3.8em;
  margin-top: 1.2em;
}
.uzsuCell, .uzsuCellExpert{
  float: left;
  height: 3.1em;
  margin: 0.2em;
}
.uzsuCellType1{
  float: left;
  height: 5em;
  margin: 0.2em;
}
.uzsuCellText{
  height: 0.8em;
  font-size: 0.7em;
}
.uzsuClear:after{
  content: "";
  clear: both;
  display: table;
}
.uzsuTimeInput, .uzsuTimeMaxMinInput, .uzsuTimeOffsetInput, .uzsuValueInput{
  width: 9ex !important;
  padding: 0.1em !important;
  text-align: center !important;
}
.uzsuTimeInput::-webkit-inner-spin-button,
.uzsuTimeMaxMinInput::-webkit-inner-spin-button,
.uzsuTimeOffsetInput::-webkit-inner-spin-button,
.uzsuValueInput::-webkit-inner-spin-button,
.uzsuTimeInput::-webkit-outer-spin-button,
.uzsuTimeMaxMinInput::-webkit-outer-spin-button,
.uzsuTimeOffsetInput::-webkit-outer-spin-button,
.uzsuValueInput::-webkit-outer-spin-button,
.uzsuTimeInput::-webkit-clear-button,
.uzsuTimeMaxMinInput::-webkit-clear-button,
.uzsuTimeOffsetInput::-webkit-clear-button,
.uzsuValueInput::-webkit-clear-button{
  -webkit-appearance: none;
  display: none;
}
.uzsuConditionValueInput, .uzsuDelayedExecValueInput{
  width: 70px !important;
  padding: 0.1em !important;
}
.uzsuConditionDeviceStringInput, .uzsuDelayedExecDeviceStringInput{
  width: 250px !important;
  padding: 0.1em !important;
}
div.ui-input-text{
  height: 1.9em;
}
div.ui-slider-switch{
  top: 1px !important;
}
.uzsuCellExpert div.ui-btn{
  top: 0.2em !important;
}
.ui-disable{
  opacity: 0.7 !important;
}
#uzsuPopupContent .ui-select.ui-mini {
  width: 100px;
  margin-left: 0;
  margin-right: 0;
}
.uzsuTextWideInput{
  width: 350px !important;
}
@media screen and (max-width: 625px){
  .uzsuRowExpert, .uzsuRowHoliday, .uzsuRowCondition, .uzsuRowDelayedExec, .uzsuCellExpert{
    display: none;
  }
}

.highcharts-root .uzsu-event-sunrise {
  fill: #ffffff;
  stroke: rgba(255, 255, 255, 0.5);
}
.highcharts-root .uzsu-event-sunset {
  fill: #f44336;
  stroke: rgba(244, 67, 54, 0.5);
}

.uzsu-minmax .highcharts-graph {
  stroke-dasharray: 4px 3px;
  stroke-width: 3px;
  stroke-linecap: butt;
}

.uzsu-all-inactive g.highcharts-series,
.uzsu-all-inactive .highcharts-point,
.uzsu-all-inactive .highcharts-markers,
.uzsu-all-inactive .uzsu-active-toggler {
  fill: #808080;
  stroke: #808080;
}

/**
 * --- W i d g e t s :   M U L T I M E D I A ----------------------------------
 */
.music {
  position: relative;
  padding: 10px 0 10px 0;
}

.music .vol {
  width: 55px;
}

.music .vol .ui-slider {
  display: inline-block;
}

.music .ui-slider input.ui-slider-input {
  display: none !important;
}

.music .title {
  position: absolute;
  margin-left: 65px;
  top: 50px;
  left: 0;
  right: 0;
}

.music .control {
  position: absolute;
  top: 0;
  right: 0;
}

.music .set {
  position: absolute;
  margin-left: 65px;
  left: 0;
  right: 0;
  bottom: 0;
}

.music .set .pos {
  margin: 10px;
}

.music .set .scale {
  position: relative;
  height: 15px;
  top: 2px;
  background-image: url('pics/scalex_linear.png');
}

.music .set .ui-slider-track {
  margin: 0 0 5px 0 !important;
}

.music .set .ui-controlgroup-horizontal {
  margin: 10px 10px 0 10px;
}

.music .set .ui-btn-inline.ui-mini {
  min-height: 36px;
  min-width: 30px;
  line-height: 31px;
  padding: 0 1px;
}

.music .set .ui-btn.ui-mini.ui-btn-inline.ui-btn-icon-notext::after {
  height: 30px;
  left: 0.605em;
  top: 0.7em;
  width: 30px;
}

.station {
  display: inline-block;
}

.station a.ui-btn-inline.ui-mini .icon {
  width: auto;
  max-width: 39px;
  height: auto;
  max-height: 37px;
}

.station a.ui-btn-inline.ui-midi .icon {
  width: auto;
  max-width: 50px;
  height: auto;
  max-height: 50px;
}

.slideshow {
  width: 100%;
}

.slideshow img {
  width: 100%;
}

/**
 * --- W i d g e t s :   P L O T ----------------------------------------------
 */
.plot {
  height: 200px;
  min-width: 250px;
  margin: 0 auto;
}
.plot.plot-highstock {
  height: 315px;
}
.plot.plot-highstock {
	height: 315px;
}

.block .ui-fixed .plot,
.block .set-1 .plot {
  min-height: 14.5em;
}
.block .set-2 .plot {
  min-height: 12.22em;
}
.block .set-3 .plot {
  min-height: 9.94em;
}

/* Highcharts */
.highcharts-container {
  font-family: inherit;
}
.highcharts-root {
  max-height: 400px;
}
.highcharts-root,
.highcharts-background,
.highcharts-plot-background {
  fill: none;
}
.highcharts-plot-border {
  stroke-width: 0;
}

.highcharts-title {
  font-size: 18px;
  fill: #fff;
}
.highcharts-subtitle {
  fill: #ddd;
}

.highcharts-axis .highcharts-axis-line {
  stroke: #666;
  stroke-width: 2px;
}
.highcharts-tick {
  stroke: #666;
  stroke-width: 1px;
}
.highcharts-xaxis .highcharts-tick {
  stroke-width: 2px;
}
.highcharts-axis-labels {
  fill: #999;
  font-size: 14px;
}
.highcharts-axis-title {
  fill: #aaa;
  font-size: 13px;
}
.highcharts-grid .highcharts-grid-line {
  stroke: rgba(255, 255, 255, .1);
  stroke-width: 1px;
}

.highcharts-legend-item text {
  fill: #ccc;
  font-size: 12px;
  font-weight: normal;
}
.highcharts-legend-item:hover text {
  fill: #fff;
}
.highcharts-legend-item-hidden * {
  fill: #333;
  stroke: #333;
}

.highcharts-markers path {
  stroke: #fff;
}
/* ... */

